separated shared lib handling